--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <title>Document</title>
 </head>
 
@@ -17,9 +20,27 @@
             style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);">
         </div>
     </div>
-    <script type="text/javascript"
-        id="scr_634f5dfe40e2a9000cfec9c2">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);</script>
-    </div>
+
+
+
+    <footer>
+        <div class="img-wrap">
+            <img src="./assets/images/logo.png" alt="logo">
+        </div>
+        <div class="content">
+            <h2>Política de Privacidade – Termos Gerais e Condições de Uso</h2>
+            <p>Os resultados referentes ao serviço foram avaliados e comprovados por nossos clientes. Não garantimos os
+                resultados iguais para todos, estes variam de pessoa para pessoa dependendo de diversos fatores
+                individuais. As informações fornecidas neste site destina-se ao seu conhecimento geral e não garantimos
+                um resultado específico, todo resultado será de inteira responsabilidade do cliente. Essa página/produto
+                não tem vínculo com o Facebook.</p>
+        </div>
+
+    </footer>
+
 </body>
+<script type="text/javascript" id="scr_634f5dfe40e2a9000cfec9c2">
+    var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);
+</script>
 
 </html>
