--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./header.css">
     <title>Document</title>
 </head>
-
+<header>
+    <div class="titles">
+        <h2 class="titles__title" >esse algoritimo inteligente</h2>
+        <h2 class="titles__title">paga no mínimo R$ 13.500 no mês</h2>
+        <h2 class="titles__title">para apertar um único botao</h2>
+        <div class="subtitle--box">
+            <img class="subtitle--box__padlock" src="cadeado.PNG" alt="cadeado com símbolo de verificação">
+            <span id="subtitle">assista o vídeo para desbloquear seu acesso</span>
+        </div>
+    </div>
+</header>
+<!--
 <body>
     <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:70%;padding: 56.25% 0 0;"><img
             decoding="async" id="thumb_634f5dfe40e2a9000cfec9c2"
@@ -21,5 +34,5 @@
         id="scr_634f5dfe40e2a9000cfec9c2">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);</script>
     </div>
 </body>
-
+-->
 </html>
