update by Rafael

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+
 </head>
 <header>
     <div class="titles">
@@ -19,7 +23,6 @@
         </div>
     </div>
 </header>
-<!--
 <body>
     <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:70%;padding: 56.25% 0 0;"><img
             decoding="async" id="thumb_634f5dfe40e2a9000cfec9c2"
