--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <div class="titles">
-        <h2 class="titles__title" >esse algoritimo inteligente</h2>
+        <h2 class="titles__title">esse algoritimo inteligente</h2>
         <h2 class="titles__title">paga no mínimo R$ 13.500 no mês</h2>
         <h2 class="titles__title">para apertar um único botao</h2>
         <div class="subtitle--box">
@@ -23,14 +23,19 @@
         </div>
     </div>
 </header>
+
 <body>
-    <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:70%;padding: 56.25% 0 0;"><img
+
+    <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:50%;padding: 56.25% 0 0;"><img
             decoding="async" id="thumb_634f5dfe40e2a9000cfec9c2"
             src="https://images.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/thumbnail.jpg"
             style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;">
         <div id="backdrop_634f5dfe40e2a9000cfec9c2"
             style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);">
         </div>
+    </div>
+    <script type="text/javascript"
+        id="scr_634f5dfe40e2a9000cfec9c2">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);</script>
     </div>
 
 
@@ -49,6 +54,8 @@
         </div>
 
     </footer>
+
+
 
 </body>
 
