--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>startmoney</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-
+    <link rel="stylesheet" href="assets/css/mediaQuieres.css">
 </head>
-<header>
-    <div class="titles">
-        <h2 class="titles__title">esse algoritimo inteligente</h2>
-        <h2 class="titles__title">paga no mínimo R$ 13.500 no mês</h2>
-        <h2 class="titles__title">para apertar um único botao</h2>
-        <div class="subtitle--box">
-            <img class="subtitle--box__padlock" src="cadeado.PNG" alt="cadeado com símbolo de verificação">
-            <span id="subtitle">assista o vídeo para desbloquear seu acesso</span>
-        </div>
-    </div>
-</header>
+
 
 <body>
 
-    <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:50%;padding: 56.25% 0 0;"><img
+    <header>
+        <div class="titles">
+            <h2 class="titles__title">esse algoritimo inteligente</h2>
+            <h2 class="titles__title">paga no mínimo R$ 13.500 no mês</h2>
+            <h2 class="titles__title">para apertar um único botao</h2>
+            <div class="subtitle--box">
+                <img class="subtitle--box__padlock" src="./assets/images/cadeado.PNG"
+                    alt="cadeado com símbolo de verificação">
+                <span id="subtitle">assista o vídeo para desbloquear seu acesso</span>
+            </div>
+        </div>
+    </header>
+    <div class="video">
+        <div id="vid_634f5dfe40e2a9000cfec9c2" style="position:relative;width:100%;padding: 56.25% 0 0;"><img
             decoding="async" id="thumb_634f5dfe40e2a9000cfec9c2"
             src="https://images.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/thumbnail.jpg"
             style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;">
@@ -34,11 +37,12 @@
             style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);">
         </div>
     </div>
-    <script type="text/javascript"
-        id="scr_634f5dfe40e2a9000cfec9c2">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);</script>
+
     </div>
 
-
+    <div class="plataform">
+        <img src="./assets/images/plataforma-rm-1.png" alt="logo">
+    </div>
 
     <footer>
         <div class="img-wrap">
@@ -56,7 +60,8 @@
     </footer>
 
 
-
+    <script type="text/javascript"
+    id="scr_634f5dfe40e2a9000cfec9c2">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/e5e10fb1-cc9a-42d9-819c-880d59fc5449/players/634f5dfe40e2a9000cfec9c2/player.js", s.async = !0, document.head.appendChild(s);</script>
 </body>
 
 </html>
